Fix bug with error message on mobile version

--- a/app/scss/blocks/form.scss
+++ b/app/scss/blocks/form.scss
@@ -7,7 +7,7 @@
 
   .form__group {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     align-items: center;
   }
 
